# LLMPlaysPokemon

./: .gitignore  README.md  config.py  main.py  pyproject.toml  start_vllm.sh
agent/: emulator.py  memory_reader.py  prompts.py  simple_agent.py  tools.py
tests/: test_on_screen_keyboard.py
