[project]
name = "llm-plays-pokemon"
version = "0.1.0"
description = "A project where LLMs play Pokemon"
readme = "README.md"
requires-python = "==3.11.*"
license = {text = "MIT"}
dependencies = [
    "anthropic>=0.39.0",
    "pyboy==2.5.3",
    "Pillow",
    "numpy",
    "smolagents>=1.14.0",
    "torch>=2.7.0",
    "transformers>=4.51.3",
    "vllm>=0.2.5",
    "openai>=1.77.0",
]

[project.optional-dependencies]
dev = [
    "pytest",
    "ruff",
]

[tool.ruff]
line-length = 120
target-version = "py311"
select = ["E", "F", "I"]
ignore = []

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
line-ending = "auto"

[tool.ruff.isort]
known-first-party = ["agent"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["."]
